<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/app_name"
        app:titleTextColor="@color/red_sedundary"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/red_prime"
        app:layout_constraintDimensionRatio="16:6"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Olá, Alex Silva"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        />

    <TextView
        android:id="@+id/tv_agencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ag 0909"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_usuario"
        app:layout_constraintTop_toBottomOf="@+id/tv_usuario"
        />
    <TextView
        android:id="@+id/tv_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CC 090909-5"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/tv_agencia"
        app:layout_constraintTop_toTopOf="@+id/tv_agencia"
        />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/car_main_dados"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:elevation="10dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_agencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_update_black_24dp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <TextView
                android:id="@+id/tv_saldo_disponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textSize="18sp"
                android:text="@string/app_disponivel"
                app:layout_constraintTop_toTopOf="@+id/iv_saldo"
                app:layout_constraintLeft_toRightOf="@+id/iv_saldo"
                app:layout_constraintBottom_toBottomOf="@+id/iv_saldo"
                />
            <ImageView
                android:id="@+id/iv_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_expand_less_black_24dp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/tv_meu_dim_dim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/app_meu_dim_dim"
                app:layout_constraintTop_toBottomOf="@+id/iv_saldo"
                app:layout_constraintStart_toStartOf="@+id/iv_saldo"
                />

            <TextView
                android:id="@+id/tv_saldo_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_saldo_limite"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_meu_dim_dim"
                app:layout_constraintStart_toStartOf="@+id/tv_meu_dim_dim"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tv_saldo_limite"
                app:layout_constraintTop_toTopOf="@+id/tv_saldo_limite"
                android:textSize="20sp"
                android:text="R$ 1.000,00"
                android:layout_marginLeft="8dp"
                />
            <View
                android:id="@+id/tv_linha"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@+id/tv_saldo_limite"
                android:layout_margin="16dp"
                />
            <TextView
                android:id="@+id/tv_ver_extrato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_ver_extrato"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_linha"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/red_prime"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_secondary"
        android:layout_width="116dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_main_dados">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_credit_card_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tv_pagar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />
            <TextView
                android:id="@+id/tv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_pagar_card_basico"
                app:layout_constraintTop_toBottomOf="@+id/iv_pagar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_transferir"
        android:layout_width="116dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/car_main_dados"
        app:layout_constraintStart_toEndOf="@id/card_secondary" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_paid_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tv_transferir"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />
            <TextView
                android:id="@+id/tv_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_transferir"
                app:layout_constraintTop_toBottomOf="@+id/iv_transferir"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_recarga"
        android:layout_width="116dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/car_main_dados"
        app:layout_constraintStart_toEndOf="@id/mcv_transferir" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_recarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_stay_current_portrait_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tv_recarga"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />
            <TextView
                android:id="@+id/tv_recarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_recarga"
                app:layout_constraintTop_toBottomOf="@+id/iv_recarga"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <ImageView
        android:id="@+id/iv_card_final_content"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:background="@color/red_prime"
        app:layout_constraintTop_toBottomOf="@id/mcv_transferir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_card_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_cartao_final"
        android:textColor="@color/white"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toStartOf="@id/iv_card_final_content"
        app:layout_constraintTop_toTopOf="@id/iv_card_final_content"
        app:layout_constraintBottom_toBottomOf="@id/iv_card_final_content"
        />
    <TextView
        android:id="@+id/tv_card_final_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_cartao_final_valor"
        android:textColor="@color/white"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_card_final"
        app:layout_constraintTop_toTopOf="@id/tv_card_final"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_expand_more_white_24dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_card_final_content"
        app:layout_constraintTop_toTopOf="@+id/iv_card_final_content"
        app:layout_constraintEnd_toEndOf="@id/iv_card_final_content"
        />
 />></androidx.constraintlayout.widget.ConstraintLayout>